# templar

./: README.md  flake.nix
.sandbox/test_py_poetry/: flake.nix  pyproject.toml
.sandbox/test_trivial/: flake.nix
empty/: flake.nix
modules/nushell/: flake-module.nix  flake.nix
python/poetry/: flake.nix
templates/python/micromamba-fhs/: flake.nix  metadata.nix
templates/python/pixi/: flake.nix  pyproject.toml
templates/python/poetry/: flake.nix
templates/python/uv/: flake.nix  pyproject.toml
